--- a/大三下项目实战/后端开发日志.md
+++ b/大三下项目实战/后端开发日志.md
@@ -8,22 +8,26 @@
 
 4. 初步引入了Spring 缓存管理，~~下一步应该解决怎么写一个管理器来自动注入清除缓存的方法~~（已经完成！），然后再下一步是接入redis做缓存中间件。
 
-	**问题一**：是Spring 缓存管理器 不设置key会怎么样？
+  **问题一**：是Spring 缓存管理器 不设置key会怎么样？
 
-	猜测：从现象来看，只是实现了缓存功能，但没法通过获取名字修改
+  猜测：从现象来看，只是实现了缓存功能，但没法通过获取名字修改
 
-	实际：没配置key，会默认生成key，不过一般不好用
+  实际：没配置key，会默认生成key，不过一般不好用
 
-	解决方案：给查询方法按不同的页码和当前页做缓存
+  解决方案：给查询方法按不同的页码和当前页做缓存
 
-	升级版：用redis做缓存，而且是给每个文章做缓存，然后获取的时候直接从缓存中获取。
+  升级版：用redis做缓存，而且是给每个文章做缓存，然后获取的时候直接从缓存中获取。
 
-	但这样改动较大，之后再说。
+  但这样改动较大，之后再说。
 
-	**问题二**：evict和clear的缓存清除有什么区别？
+  **问题二**：evict和clear的缓存清除有什么区别？
 
-	一个可以全清，一个不行，真奇怪啊！
-	
-	evict是根据键值清除，clear确实是全清。
-	
+  一个可以全清，一个不行，真奇怪啊！
+
+  evict是根据键值清除，clear确实是全清。
+
+5. 文章表中要区别作者和创建者。
+
+6. 关于重构关联管理，涉及到大量dto的转写，函数式编程的使用。不过最终在引入id字段后，解决了新增与已经逻辑删除的冲突的问题。而且也大幅简化删除，修改的逻辑。一个唯一性的字段真的很重要！
+
 	
