--- a/大三下项目实战/待优化项.md
+++ b/大三下项目实战/待优化项.md
@@ -3,4 +3,5 @@
 3. ~~文章管理页新增文章时将文章内容的输入框改为专供大批量文字输入的输入框。~~
 4. ~~文章管理页常规展示区文章内容希望只展示前50个字符的内容~~
 5. 前后端应对一切用户输入进行校验。应该有相关插件，可以搜搜看。
-
+6. 后端api应遵循restful风格，要修改的话需要将前后端一起改
+7. mybatis-plus 如何配置数据库主键递增从0开始，如何定期清除逻辑删除字段为1的值，或者拷贝到一张新表做冷备份？
